--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+
+#defaults
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#Pool de Conexão com banco (HIRAKI)
+spring.datasource.hikari.maximum-pool-size=25
