--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=false
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 
 #defaults
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
