--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 
+#defaults
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#Pool de Conexão com banco (HIRAKI)
+spring.datasource.hikari.maximum-pool-size=25
 
