--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,8 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=none
-
-spring.jpa.show-sql=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-
-#defaults
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-#Pool de Conexão com banco (HIRAKI)
-spring.datasource.hikari.maximum-pool-size=25
+spring.jpa.hibernate.ddl-auto=none
 
