implementado login e cadsatro de usuario

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,4 +6,11 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# JWT - hash md5 para Vfr4%tgb
+jwt.secret=49c1bb469cf9c1d4933ad7986f4b81e8
+# token com dura\uFFFD\uFFFDo de 1 dia
+jwt.expiration=86400
+
 
