--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "5.6.1",
+    "axios": "^0.27.2",
     "cra-template": "1.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
