--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "5.6.1",
     "axios": "^0.27.2",
     "cra-template": "1.1.3",
+    "moment": "^2.29.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-router-dom": "6.3.0",
