--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
   },
   "engines": {
     "node": "16.13.1",
-    "npm": "8.1.2"
+    "npm": "8.1.2",
+    "react": "18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
