--- a/front/package.json
+++ b/front/package.json
@@ -17,8 +17,14 @@
     "react-scripts": "5.0.0",
     "web-vitals": "2.1.4"
   },
+  "engines": {
+    "node": "16.13.1",
+    "npm": "8.1.2",
+    "react": "18.0.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev-start": "react-scripts start",
     "build": "react-scripts build"
   },
   "eslintConfig": {
