--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "node server.js",
     "dev-start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "npm install --legacy-peer-deps && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
